# CircuitPython_SoftKeyboard

./: LICENSE  README.rst  README.rst.license  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst  index.rst.license
examples/: soft_keyboard_simpletest.py  softkeyboard_simpletest.py  softkeyboard_tft_featherwing_v1_simpletest.py  tft_featherwing_v1_simpletest.py
soft_keyboard/: soft_keyboard.py
softkeyboard/: default_layout.json  default_layout.json.license  mobile_layout.json  softkeyboard.py
