# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2024 Tim Cocks, DJDevon3
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-softkeyboard"
description = "CircuitPython software defined keyboard for touch displays using displayio GridLayout."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Tim Cocks, DJDevon3", email = "foamyguy@gmail.com"}
]
urls = {Homepage = "https://github.com/Foamyguy/CircuitPython_SoftKeyboard"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "softkeyboard",
    "keyboard",
    "softkeyboard",
    "touchscreen",
    "displayio",
    "display",
    "ui",
    "gui",
    "qwerty",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
packages = ["softkeyboard"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
